stroop-macros/tests/compile_fails/invalid_comma.stderr
error: expected comma
 --> tests/compile_fails/invalid_comma.rs:4:15
  |
4 |     pattern!(0+);
  |               ^
